# ha_bt_oximeter

./: LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt  test.sh
.github/workflows/: hacs.yml
custom_components/bt_oximeter/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_base.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/bt_oximeter/devices/: TEMPLATE.py  __init__.py  jks50f.py
custom_components/bt_oximeter/translations/: de.json  en.json
tests/: README.md  __init__.py  conftest.py  fixtures.py  pytest.ini  test_binary_sensor.py  test_binary_sensor_entities.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_jks50f_device.py  test_sensor.py  test_sensor_entities.py
